2007-01-11 Niels Schelbach <niels@schlund.de>

	* src/de/schlund/pfixcore/workflow/app/DefaultIWrapperState.java:
	* src/de/schlund/pfixcore/workflow/app/IHandlerSimpleContainer.java:
	* src/de/schlund/pfixcore/workflow/app/IWrapperSimpleContainer.java:
	* src/de/schlund/pfixcore/workflow/Context.java:
	* src/de/schlund/pfixcore/util/StateUtil.java:
	* src/de/schlund/pfixcore/webservice/ServiceRuntime.java:
	* src/de/schlund/pfixxml/PathFactory.java:
	* src/de/schlund/pfixxml/AbstractXMLServer.java:
	* src/de/schlund/pfixxml/ServletManager.java:
	* src/de/schlund/pfixxml/perflogging/PerfEventType.java:
	* src/de/schlund/pfixxml/PfixServletRequest.java:
	Changed PerfEventType to enum and added entzry for webservice calls
	



2007-01-10  Martin Leidig  <mleidig@schlund.de>

	* projects/core/script/webservice.js: fixed null value handling bug

2007-01-02  Martin Leidig  <mleidig@schlund.de>

	* src/de/schlund/pfixcore/webservice/generate/WebServiceTask.java: removed check
	for webservice source files (cause they aren't really required and are absent if
	the services come from jar files), extended modification check (modtime within jar
	file is checked too)

2007-01-02  Sebastian Marsching  <sebastian.marsching@1und1.de>

	* projects/core/editor2/conf/edit.conf.xml: 
	* src/de/schlund/pfixcore/editor2/core/spring/PustefixSessionServiceImpl.java: 
	* src/de/schlund/pfixcore/editor2/frontend/util/SpringHelperEndContextInterceptor.java (removed): 
	Removed end interceptor because order in which end interceptors are called related
	to navigation processing changed thus causing the editor to fail. No the context
	is stored using a weak reference instead, so there is no need to manually remove
	it from the thread.

2006-12-28  Sebastian Marsching  <sebastian.marsching@1und1.de>

	* projects/webservice/xml/two_frames.xml: 
	* projects/core/img/console_webserviceadmin.gif: 
	* projects/core/img/console_webservicemonitor.gif: 
	* projects/core/xsl/utils.xsl: 